# abac-proxy

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  allowlist.example.json  allowlist.jsonplaceholder.json  go.mod  go.sum  policy.browserbase.json  policy.example.json  policy.jsonplaceholder.json  run.sh  sqlc.yaml  test_proxy.sh
.github/workflows/: ci.yml
cmd/proxy/: BUILD.bazel  main.go
cmd/proxy/cmd/: BUILD.bazel  config.go  root.go
db/: schema.sql
examples/: jsonplaceholder.policygroup.json
infra/: render.yaml  seed.sql  test_data.sql
infra/migrations/: 20260315000001_initial_schema.sql  20260316000001_add_credential_tables.sql  20260316000002_migrate_policies_to_credentials.sql  20260316000003_drop_user_active_constraint.sql  20260316000004_add_header_string.sql
internal/api/: BUILD.bazel  api.go  api_test.go  dbapi.go  fileapi.go
internal/api/db/: BUILD.bazel  db.go  db_test.go
internal/api/fs/: BUILD.bazel  fs.go  fs_test.go
internal/auth/: BUILD.bazel  token_hash.go
internal/db/: BUILD.bazel  downstream_tokens.sql.go  models.go  policies.sql.go  pool.go  querier.go  upstream_credentials.sql.go  users.sql.go
internal/db/queries/: policies.sql  upstream_credentials.sql
internal/log/: BUILD.bazel  log.go
internal/policy/: BUILD.bazel  cache.go  engine.go  filter.go  matcher.go  policy.go
internal/policy/engine/: BUILD.bazel  engine.go  engine_test.go
internal/policy/filter/: BUILD.bazel  filter.go  filter_test.go
internal/policy/matcher/: BUILD.bazel  matcher.go  matcher_test.go
internal/proxy/: BUILD.bazel  abac_interceptor.go  allowlist.go  examples.go  interceptor.go  proxy.go  proxy_test.go
internal/proxy/allowlist/: BUILD.bazel  allowlist.go  allowlist_test.go
internal/proxy/interceptor/: BUILD.bazel  abac.go  abac_test.go  interceptor.go
internal/storage/: BUILD.bazel  downstream_tokens.sql.go  models.go  policies.sql.go  policy_rules.sql.go  querier.go  rate_limits.sql.go  store.go  tokens.sql.go  upstream_credentials.sql.go  users.sql.go
internal/storage/queries/: downstream_tokens.sql  policies.sql  policy_rules.sql  rate_limits.sql  tokens.sql  users.sql
scripts/: add-policy.sh
