module(name = "abac-proxy")

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")

# loads go_sdk bazel module extension that allows bazel to fetch the go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.9")

# fetches go modules with `go mod download` then uses gazelle to generate build files for them
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "org_uber_go_zap",
)
