load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "proxy_lib",
    srcs = ["main.go"],
    importpath = "github.com/abac/proxy/cmd/proxy",
    visibility = ["//visibility:public"],
    deps = ["//cmd/proxy/cmd"],
)

go_binary(
    name = "proxy",
    embed = [":proxy_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":proxy"],
    package_dir = "/root",
    visibility = ["//visibility:public"],
)

oci_image(
    name = "image",
    base = "@alpine_linux_amd64",
    cmd = ["./proxy"],
    tars = [":tar"],
    visibility = ["//visibility:public"],
    workdir = "/root",
)

oci_load(
    name = "tarball",
    image = ":image",
    repo_tags = ["abac-proxy:latest"],
)

oci_push(
    name = "push-local",
    image = ":image",
    remote_tags = ["latest"],
    repository = "localhost:5001/abac-proxy",
)

oci_push(
    name = "push-ghcr",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/ajmcquilkin/abac-proxy",
)
