load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "api.go",
        "dbapi.go",
        "fileapi.go",
    ],
    importpath = "github.com/abac/proxy/internal/api",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/db",
        "//internal/policy",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "api_test",
    srcs = ["api_test.go"],
    embed = [":api"],
    deps = [
        "//internal/db",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgtype",
    ],
)
