load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "db.go",
        "downstream_tokens.sql.go",
        "models.go",
        "policies.sql.go",
        "pool.go",
        "querier.go",
        "upstream_credentials.sql.go",
        "users.sql.go",
    ],
    importpath = "github.com/abac/proxy/internal/db",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgtype",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
