load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "policy",
    srcs = [
        "cache.go",
        "engine.go",
        "filter.go",
        "matcher.go",
    ],
    importpath = "github.com/abac/proxy/internal/policy",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/auth",
        "//internal/db",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//pgtype",
    ],
)
