load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "proxy",
    srcs = [
        "abac_interceptor.go",
        "allowlist.go",
        "interceptor.go",
        "proxy.go",
    ],
    importpath = "github.com/abac/proxy/internal/proxy",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/db",
        "//internal/log",
        "//internal/policy",
    ],
)
