load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "proxy",
    srcs = ["proxy.go"],
    importpath = "github.com/abac/proxy/internal/proxy",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/log",
        "//internal/proxy/allowlist",
        "//internal/proxy/interceptor",
    ],
)

go_test(
    name = "proxy_test",
    srcs = ["proxy_test.go"],
    embed = [":proxy"],
    deps = [
        "//internal/proxy/allowlist",
        "//internal/proxy/interceptor",
    ],
)
