load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = [
        "db.go",
        "models.go",
        "policies.sql.go",
        "policy_rules.sql.go",
        "querier.go",
        "rate_limits.sql.go",
        "store.go",
        "tokens.sql.go",
        "users.sql.go",
    ],
    importpath = "github.com/abac/proxy/internal/storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgtype",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
