load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "config.go",
        "root.go",
    ],
    importpath = "github.com/abac/proxy/cmd/proxy/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/api",
        "//internal/auth",
        "//internal/db",
        "//internal/log",
        "//internal/policy/engine",
        "//internal/policy/filter",
        "//internal/policy/matcher",
        "//internal/proxy",
        "//internal/proxy/allowlist",
        "//internal/proxy/interceptor",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
