load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "db",
    srcs = ["db.go"],
    importpath = "github.com/abac/proxy/internal/api/db",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/db",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "db_test",
    srcs = ["db_test.go"],
    embed = [":db"],
    deps = [
        "//internal/api",
        "//internal/db",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgtype",
    ],
)
