load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fs",
    srcs = ["fs.go"],
    importpath = "github.com/abac/proxy/internal/api/fs",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/api"],
)

go_test(
    name = "fs_test",
    srcs = ["fs_test.go"],
    embed = [":fs"],
)
