load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "engine",
    srcs = ["engine.go"],
    importpath = "github.com/abac/proxy/internal/policy/engine",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/policy/filter",
        "//internal/policy/matcher",
    ],
)

go_test(
    name = "engine_test",
    srcs = ["engine_test.go"],
    embed = [":engine"],
    deps = ["//internal/api"],
)
