load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "filter",
    srcs = ["filter.go"],
    importpath = "github.com/abac/proxy/internal/policy/filter",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/policy"],
)

go_test(
    name = "filter_test",
    srcs = ["filter_test.go"],
    embed = [":filter"],
    deps = ["//internal/policy"],
)
