load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "allowlist",
    srcs = ["allowlist.go"],
    importpath = "github.com/abac/proxy/internal/proxy/allowlist",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "allowlist_test",
    srcs = ["allowlist_test.go"],
    embed = [":allowlist"],
)
